[package]
name = "dns_updater"
version = "0.1.0"
authors = ["Alex <alexzatstone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.1", features = ["full"] }
error-chain = "0.12.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1"